src/test/ui/consts/control-flow/loop.stderr
error[E0744]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:53:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^

error[E0744]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:57:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0744`.
